--- a/docs/tcp/1407.md
+++ b/docs/tcp/1407.md
@@ -9,7 +9,9 @@ url: /tcp/1407
 
 # IANA Data
 
-_Name:_ dbsa-lm
+_Name:_ tibet-server
 
-_Description:_ DBSA License Manager
+_Description:_ TIBET Data Server
+
+_Note:_ This port has been retasked on 2015-06-16.
 
