--- a/docs/tcp/1528.md
+++ b/docs/tcp/1528.md
@@ -8,3 +8,10 @@ url: /tcp/1528
 [Home](/) - [tcp](/tcp/) - 1528
 
 * Oracle connections
+
+# IANA Data
+
+_Name:_ norp
+
+_Description:_ Not Only a Routeing Protocol
+
