--- a/docs/tcp/2371.md
+++ b/docs/tcp/2371.md
@@ -9,7 +9,7 @@ url: /tcp/2371
 
 # IANA Data
 
-_Name:_ worldwire
+_Name:_ rda
 
-_Description:_ Compaq WorldWire Port
+_Description:_ Remote Device Access
 
