--- a/docs/tcp/3071.md
+++ b/docs/tcp/3071.md
@@ -9,7 +9,7 @@ url: /tcp/3071
 
 # IANA Data
 
-_Name:_ csd-mgmt-port
+_Name:_ xplat-replicate
 
-_Description:_ ContinuStor Manager Port
+_Description:_ Crossplatform replication protocol
 
