--- a/docs/tcp/3612.md
+++ b/docs/tcp/3612.md
@@ -9,7 +9,7 @@ url: /tcp/3612
 
 # IANA Data
 
-_Name:_ hp-dataprotect
+_Name:_ dataprotector
 
-_Description:_ HP Data Protector
+_Description:_ Micro Focus Data Protector
 
