--- a/docs/tcp/3841.md
+++ b/docs/tcp/3841.md
@@ -9,7 +9,7 @@ url: /tcp/3841
 
 # IANA Data
 
-_Name:_ zfirm-shiprush3
+_Name:_ shiprush-db-svr
 
-_Description:_ Z-Firm ShipRush v3
+_Description:_ ShipRush Database Server
 
