--- a/docs/tcp/4183.md
+++ b/docs/tcp/4183.md
@@ -9,7 +9,7 @@ url: /tcp/4183
 
 # IANA Data
 
-_Name:_ gmmp
+_Name:_ cyborgnet
 
-_Description:_ General Metaverse Messaging Protocol
+_Description:_ CyborgNet communications protocol
 
