--- a/docs/tcp/465.md
+++ b/docs/tcp/465.md
@@ -9,7 +9,7 @@ url: /tcp/465
 
 # IANA Data
 
-_Name:_ urd
+_Name:_ submissions
 
-_Description:_ URL Rendesvous Directory for SSM
+_Description:_ Message Submission over TLS protocol
 
