--- a/docs/tcp/631.md
+++ b/docs/tcp/631.md
@@ -9,9 +9,7 @@ url: /tcp/631
 
 # IANA Data
 
-_Name:_ ipp
+_Name:_ ipps
 
-_Description:_ IPP (Internet Printing Protocol)
-
-_Note:_ Defined TXT keys: See BonjourPrinting.pdf.
+_Description:_ Internet Printing Protocol over HTTPS
 
