--- a/docs/tcp/6789.md
+++ b/docs/tcp/6789.md
@@ -9,7 +9,7 @@ url: /tcp/6789
 
 # IANA Data
 
-_Name:_ smc-https
+_Name:_ radg
 
-_Description:_ SMC-HTTPS
+_Description:_ GSS-API for the Oracle Remote Administration Daemon
 
