--- a/docs/udp/2640.md
+++ b/docs/udp/2640.md
@@ -9,11 +9,7 @@ url: /udp/2640
 
 # IANA Data
 
-_Name:_ sai_sentlm
+_Name:_ ami-control
 
-_Description:_ Sabbagh Associates Licence Manager
-
-_Note:_ This entry is an alias to "sai-sentlm".
-This entry is now historic, not usable for use with many
-common service discovery mechanisms.
+_Description:_ Alcorn McBride Inc protocol used for device control
 
