--- a/docs/udp/3568.md
+++ b/docs/udp/3568.md
@@ -9,7 +9,7 @@ url: /udp/3568
 
 # IANA Data
 
-_Name:_ enc-tunnel-sec
+_Name:_ dof-tunnel-sec
 
-_Description:_ EMIT secure tunnel
+_Description:_ DOF Secure Tunnel
 
