--- a/docs/udp/3938.md
+++ b/docs/udp/3938.md
@@ -11,7 +11,7 @@ url: /udp/3938
 
 _Name:_ dbcontrol_agent
 
-_Description:_ Oracel dbControl Agent po
+_Description:_ Oracle dbControl Agent po
 
 _Note:_ This entry is an alias to "dbcontrol-agent".
 This entry is now historic, not usable for use with many
