--- a/docs/udp/4073.md
+++ b/docs/udp/4073.md
@@ -11,5 +11,5 @@ url: /udp/4073
 
 _Name:_ iRAPP
 
-_Description:_ iRAPP Server Protocol
+_Description:_ Interactive Remote Application Pairing Protocol
 
