--- a/docs/udp/4307.md
+++ b/docs/udp/4307.md
@@ -9,7 +9,7 @@ url: /udp/4307
 
 # IANA Data
 
-_Name:_ visicron-vs
+_Name:_ trueconf
 
-_Description:_ Visicron Videoconference Service
+_Description:_ TrueConf Videoconference Service
 
