--- a/docs/udp/45000.md
+++ b/docs/udp/45000.md
@@ -11,5 +11,5 @@ url: /udp/45000
 
 _Name:_ asmp-mon
 
-_Description:_ NSi AutoStore Status Monitoring Protocol device monitoring
+_Description:_ Nuance AutoStore Status Monitoring Protocol (device monitoring)
 
