--- a/docs/udp/502.md
+++ b/docs/udp/502.md
@@ -9,7 +9,7 @@ url: /udp/502
 
 # IANA Data
 
-_Name:_ asa-appl-proto
+_Name:_ mbap
 
-_Description:_ asa-appl-proto
+_Description:_ Modbus Application Protocol
 
