--- a/docs/udp/8567.md
+++ b/docs/udp/8567.md
@@ -9,7 +9,7 @@ url: /udp/8567
 
 # IANA Data
 
-_Name:_ enc-tunnel
+_Name:_ dof-tunnel
 
-_Description:_ EMIT tunneling protocol
+_Description:_ DOF Tunneling Protocol
 
