--- a/docs/udp/862.md
+++ b/docs/udp/862.md
@@ -9,7 +9,7 @@ url: /udp/862
 
 # IANA Data
 
-_Name:_ twamp-control
+_Name:_ twamp-test
 
-_Description:_ Two-way Active Measurement Protocol (TWAMP) Control
+_Description:_ TWAMP-Test Receiver Port
 
