--- a/docs/tcp/10631.md
+++ b/docs/tcp/10631.md
@@ -11,6 +11,5 @@ url: /tcp/10631
 
 _Name:_ printopia
 
-_Description:_ Port to allow for administration and control of "Printopia" application software,
-      which provides printing services to mobile users
+_Description:_ Printopia Serve
 
