--- a/docs/tcp/1883.md
+++ b/docs/tcp/1883.md
@@ -9,7 +9,7 @@ url: /tcp/1883
 
 # IANA Data
 
-_Name:_ ibm-mqisdp
+_Name:_ mqtt
 
-_Description:_ IBM MQSeries SCADA
+_Description:_ Message Queuing Telemetry Transport Protocol
 
