--- a/docs/tcp/2114.md
+++ b/docs/tcp/2114.md
@@ -9,7 +9,7 @@ url: /tcp/2114
 
 # IANA Data
 
-_Name:_ newheights
+_Name:_ ariascribe
 
-_Description:_ NEWHEIGHTS
+_Description:_ Classical Music Meta-Data Access and Enhancement
 
