--- a/docs/tcp/2221.md
+++ b/docs/tcp/2221.md
@@ -9,7 +9,7 @@ url: /tcp/2221
 
 # IANA Data
 
-_Name:_ rockwell-csp1
+_Name:_ ethernet-ip-s
 
-_Description:_ Rockwell CSP1
+_Description:_ EtherNet/IP over TLS
 
