--- a/docs/tcp/376.md
+++ b/docs/tcp/376.md
@@ -11,5 +11,5 @@ url: /tcp/376
 
 _Name:_ nip
 
-_Description:_ Amiga Envoy Network Inquiry Proto
+_Description:_ Amiga Envoy Network Inquiry Protocol
 
