--- a/docs/tcp/45000.md
+++ b/docs/tcp/45000.md
@@ -11,5 +11,5 @@ url: /tcp/45000
 
 _Name:_ asmp
 
-_Description:_ NSi AutoStore Status Monitoring Protocol data transfer
+_Description:_ Nuance AutoStore Status Monitoring Protocol (data transfer)
 
