--- a/docs/tcp/45001.md
+++ b/docs/tcp/45001.md
@@ -11,5 +11,5 @@ url: /tcp/45001
 
 _Name:_ asmps
 
-_Description:_ NSi AutoStore Status Monitoring Protocol secure data transfer
+_Description:_ Nuance AutoStore Status Monitoring Protocol (secure data transfer)
 
