--- a/docs/tcp/5567.md
+++ b/docs/tcp/5567.md
@@ -9,7 +9,7 @@ url: /tcp/5567
 
 # IANA Data
 
-_Name:_ enc-eps-mc-sec
+_Name:_ dof-dps-mc-sec
 
-_Description:_ EMIT protocol stack multicast/secure transport
+_Description:_ DOF Protocol Stack Multicast/Secure Transport
 
