--- a/docs/tcp/862.md
+++ b/docs/tcp/862.md
@@ -11,5 +11,5 @@ url: /tcp/862
 
 _Name:_ twamp-control
 
-_Description:_ Two-way Active Measurement Protocol (TWAMP) Control
+_Description:_ TWAMP-Control
 
