--- a/docs/udp/21.md
+++ b/docs/udp/21.md
@@ -11,7 +11,7 @@ url: /udp/21
 
 _Name:_ ftp
 
-_Description:_ File Transfer [Control]
+_Description:_ File Transfer Protocol [Control]
 
 _Note:_ Defined TXT keys: u=&lt;username&gt; p=&lt;password&gt; path=&lt;path&gt;
 
