--- a/docs/udp/3567.md
+++ b/docs/udp/3567.md
@@ -9,7 +9,7 @@ url: /udp/3567
 
 # IANA Data
 
-_Name:_ enc-eps
+_Name:_ dof-eps
 
-_Description:_ EMIT protocol stack
+_Description:_ DOF Protocol Stack
 
