--- a/docs/udp/5777.md
+++ b/docs/udp/5777.md
@@ -9,7 +9,7 @@ url: /udp/5777
 
 # IANA Data
 
-_Name:_ dali-port
+_Name:_ starfield-io
 
-_Description:_ DALI Port
+_Description:_ Control commands and responses
 
