--- a/docs/udp/690.md
+++ b/docs/udp/690.md
@@ -11,5 +11,5 @@ url: /udp/690
 
 _Name:_ vatp
 
-_Description:_ Velazquez Application Transfer Protocol
+_Description:_ Velneo Application Transfer Protocol
 
