--- a/docs/udp/861.md
+++ b/docs/udp/861.md
@@ -9,7 +9,7 @@ url: /udp/861
 
 # IANA Data
 
-_Name:_ owamp-control
+_Name:_ owamp-test
 
-_Description:_ OWAMP-Control
+_Description:_ OWAMP-Test
 
