--- a/content/tcp/44818.md
+++ b/content/tcp/44818.md
@@ -6,6 +6,8 @@ slug: tcp/44818
 [portdb](/) / [tcp](/category/tcp.html) / 44818
 
 
+* [EtherNet/IP](https://en.wikipedia.org/wiki/EtherNet/IP) makes use of TCP port number 44818 for explicit messaging.
+
 ## IANA Data
 
 _Name:_ EtherNet/IP-2
