--- a/content/udp/2222.md
+++ b/content/udp/2222.md
@@ -6,6 +6,8 @@ slug: udp/2222
 [portdb](/) / [udp](/category/udp.html) / 2222
 
 
+* [EtherNet/IP](https://en.wikipedia.org/wiki/EtherNet/IP) makes use of UDP port number 2222 for implicit messaging.
+
 ## IANA Data
 
 _Name:_ EtherNet/IP-1
